Bump version up to v1.3.0